{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 99,
  "lineage": "e2885b7f-51eb-df04-a4b5-6a251c12e0bf",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afa97b0ba9654465",
            "arn": "arn:aws:ec2:us-east-1:053097998829:elastic-ip/eipalloc-0afa97b0ba9654465",
            "association_id": "eipassoc-00592af41a8fd0b77",
            "domain": "vpc",
            "id": "eipalloc-0afa97b0ba9654465",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d3c08f64ab2b03a",
            "private_dns": "ip-10-0-11-189.ec2.internal",
            "private_ip": "10.0.11.189",
            "public_dns": "ec2-18-214-220-8.compute-1.amazonaws.com",
            "public_ip": "18.214.220.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-vpc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:internet-gateway/igw-0df69845440eecc56",
            "id": "igw-0df69845440eecc56",
            "owner_id": "053097998829",
            "tags": {
              "Name": "eks-vpc",
              "team": "devops"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afa97b0ba9654465",
            "association_id": "eipassoc-00592af41a8fd0b77",
            "connectivity_type": "public",
            "id": "nat-0d3cfbff7695c5361",
            "network_interface_id": "eni-02d3c08f64ab2b03a",
            "private_ip": "10.0.11.189",
            "public_ip": "18.214.220.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3c449d52e69886d",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:route-table/rtb-05cab1e089b55cf7a",
            "id": "rtb-05cab1e089b55cf7a",
            "owner_id": "053097998829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d3cfbff7695c5361",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_nat_gateway.eks-NatGateway",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:route-table/rtb-02f726b4955843b3e",
            "id": "rtb-02f726b4955843b3e",
            "owner_id": "053097998829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df69845440eecc56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5a3b2233b295e8",
            "route_table_id": "rtb-05cab1e089b55cf7a",
            "subnet_id": "subnet-09e539d9997b5ab90"
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_nat_gateway.eks-NatGateway",
            "module.vpc_network.aws_route_table.private_rt",
            "module.vpc_network.aws_subnet.eks-private-subnets",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c70f0bb01a95dc",
            "route_table_id": "rtb-05cab1e089b55cf7a",
            "subnet_id": "subnet-0be01619f6c2418a1"
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_nat_gateway.eks-NatGateway",
            "module.vpc_network.aws_route_table.private_rt",
            "module.vpc_network.aws_subnet.eks-private-subnets",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05570e463505a8d9f",
            "route_table_id": "rtb-05cab1e089b55cf7a",
            "subnet_id": "subnet-02a1edac4412ae37b"
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_nat_gateway.eks-NatGateway",
            "module.vpc_network.aws_route_table.private_rt",
            "module.vpc_network.aws_subnet.eks-private-subnets",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced65171c4ce61a5",
            "route_table_id": "rtb-02f726b4955843b3e",
            "subnet_id": "subnet-0d3c449d52e69886d"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_route_table.public_rt",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c60589868128fdc",
            "route_table_id": "rtb-02f726b4955843b3e",
            "subnet_id": "subnet-0ab10cc779c0d0094"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_route_table.public_rt",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ea14b9aec57e7a",
            "route_table_id": "rtb-02f726b4955843b3e",
            "subnet_id": "subnet-00b5c9108f17fbdb7"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.eks-vpc-IGW",
            "module.vpc_network.aws_route_table.public_rt",
            "module.vpc_network.aws_subnet.eks-public-subnets",
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-09e539d9997b5ab90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e539d9997b5ab90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-3",
              "team": "devops"
            },
            "tags_all": {
              "Name": "Private-3",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-0be01619f6c2418a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be01619f6c2418a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-4",
              "team": "devops"
            },
            "tags_all": {
              "Name": "Private-4",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-02a1edac4412ae37b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a1edac4412ae37b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-5",
              "team": "devops"
            },
            "tags_all": {
              "Name": "Private-5",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-0d3c449d52e69886d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3c449d52e69886d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-0",
              "team": "devops"
            },
            "tags_all": {
              "Name": "PublicSubnet-0",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-0ab10cc779c0d0094",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab10cc779c0d0094",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "PublicSubnet-1",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:subnet/subnet-00b5c9108f17fbdb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b5c9108f17fbdb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053097998829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "PublicSubnet-2",
              "team": "devops"
            },
            "vpc_id": "vpc-018efad2d4a92a257"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053097998829:vpc/vpc-018efad2d4a92a257",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027bc3fecd8170987",
            "default_route_table_id": "rtb-0cae35b5d7c4e0a2d",
            "default_security_group_id": "sg-043c6e7a683355f4c",
            "dhcp_options_id": "dopt-a54444df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018efad2d4a92a257",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cae35b5d7c4e0a2d",
            "owner_id": "053097998829",
            "tags": {
              "Name": "eks-vpc",
              "team": "devops"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "team": "devops"
            }
          }
        }
      ]
    }
  ]
}